--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -20,3 +20,7 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+doctrine:
+    dbal:
+        url: 'sqlite:///%kernel.project_dir%/var/data/test.sqlite'
