--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "doctrine/data-fixtures": "^1.3",
         "phpspec/prophecy": "^1.10",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^5.1"
