--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         ]
     },
     "require": {
-        "php": "^7.0, <7.4",
+        "php": "^7.0",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
@@ -29,14 +29,14 @@
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
-        "symfony/symfony": "3.3.*",
+        "symfony/symfony": "^3.0",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
         "doctrine/data-fixtures": "^1.3",
         "phpspec/prophecy": "^1.10",
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^5.1"
+        "phpunit/phpunit": "^9.2",
+        "sensio/generator-bundle": "^3.0"
     },
     "scripts": {
         "symfony-scripts": [
@@ -55,9 +55,6 @@
         ]
     },
     "config": {
-        "platform": {
-            "php": "7.1.3"
-        },
         "sort-packages": true
     },
     "extra": {
