--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "require-dev": {
         "doctrine/data-fixtures": "^1.3",
         "phpspec/prophecy": "^1.10",
+        "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.2",
         "sensio/generator-bundle": "^3.0"
     },
