--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     },
     "require-dev": {
         "doctrine/data-fixtures": "^1.4",
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "liip/functional-test-bundle": "^4.2",
         "phpspec/prophecy": "^1.10",
         "phpspec/prophecy-phpunit": "^2.0",
