--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "doctrine/data-fixtures": "^1.4",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "liip/functional-test-bundle": "^4.2",
+        "liip/test-fixtures-bundle": "^1.9",
         "phpspec/prophecy": "^1.10",
         "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.2",
