--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "phpspec/prophecy": "^1.10",
         "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.2",
-        "sensio/generator-bundle": "^3.0"
+        "sensio/generator-bundle": "^3.0",
+        "theofidry/alice-data-fixtures": "^1.2"
     },
     "scripts": {
         "symfony-scripts": [
