--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,12 @@ jobs:
       # run tests with phpunit or codecept
       - run: mkdir ./var/data
       - run: ./bin/console doctrine:database:create --env=test
-      - run: ./vendor/bin/phpunit
+      - run: ./vendor/bin/phpunit --log-junit ~/phpunit/junit.xml
       #- run: ./vendor/bin/codecept build
       #- run: ./vendor/bin/codecept run
+
+      - store_test_results:
+            path: ~/phpunit
+
+      - store_artifacts:
+            path: ~/phpunit
